--- a/src/components/layout/styles/layout.css
+++ b/src/components/layout/styles/layout.css
@@ -1,11 +1,14 @@
 .layout {
   display: grid;
-  grid-template-rows: 300px 1fr 200px;
+  grid-template-rows: 100px 1fr 200px;
 }
 
 .header {
   border: 1px solid black;
-  padding: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
 }
 
 .footer {
