--- a/src/pages/adverts/styles/newadvert.css
+++ b/src/pages/adverts/styles/newadvert.css
@@ -2,3 +2,19 @@
   display: grid;
   place-items: center;
 }
+
+.adverts {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.advert {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
